--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,8 +28,14 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+    <h1>This is a Todo App</h1>
+    <h3>You can add your upcoming task here</h3>
     <div id="root"></div>
+    </header>
+
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
